# wormhole

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt
.github/workflows/: test.yml
src/common/: async_wrapper.py  csv_files.py  fits.py  fs.py  pa_files.py  utils.py
src/connectors/stsci/: bulk_fetcher.py  lc_store.py
src/dataset/: __init__.py  lc_loader.py  meta_loader.py
src/pipeline/: __init__.py  bulk_fetch_stsci.py  generate_dataset.py  generate_manifest.py  lightcurve_pipe.py  metadataset_pipe.py  refresh_lightcurves.py  run.py
src/pipeline/builder/: pipe.py
src/pipeline/processing/: pipe.py
src/pipeline/stages/: lightcurve_stages.py  metadataset_stages.py
src/pipeline/stsci_client/: fetcher.py
src/wormhole/cli/: __init__.py  main.py  pipeline.py  training.py
src/wormhole/common/: async_wrapper.py  csv_files.py  defaults.py  fits.py  fits_downloader.py  fs.py  http.py  npz.py  pa_files.py  utils.py
src/wormhole/config/: __init__.py  configuration.py  defaults.py
src/wormhole/connectors/stsci/: bulk_fetcher.py  lc_store.py
src/wormhole/dataset/: __init__.py  lightcurve.py  meta_loader.py
src/wormhole/pipeline/: __init__.py  bulk_fetch_stsci.py  generate_dataset.py  generate_manifest.py  lightcurve_pipe.py  main.py  metadataset_pipe.py  recache_lightcurves.py  refresh_lightcurves.py
src/wormhole/training/: __init__.py  checkpointer.py  evaluator.py  loader.py  main.py  model_gen.py  trainer.py
tests/: __init__.py  synth.py  test_pipeline.py  test_training.py  wormhole.toml
tests/data_baseline/lc_metadata/: synth_sector_1_lc.csv
tests/data_baseline/metadataset/: metadataset.csv
tests/data_baseline/tce_metadata/: synth0000000000000-s0001-s0001_dvr-tcestats.csv
tests/data_input/bulk_lc/: synth_sector_1_lc.sh
(+9 files in other folders)
