[build-system]
requires = ["setuptools>=75.6.0", "setuptools_scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wormhole"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "astropy>=7.0.0",
  "flax>=0.8.0",
  "flaxoil@git+https://github.com/mnahad/flaxoil.git@main",
  "fsspec[http]>=2024.12.0",
  "jax>=0.4.24",
  "pyarrow>=18.1.0",
]
authors = [
  { name="Mohammed Nawabuddin", email="MNahad@users.noreply.github.com" },
]
description = "Exoplanet detection with flaxoil"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.license]
file = "LICENSE"

[project.scripts]
wormhole = "wormhole.cli.main:entrypoint"

[project.urls]
Repository = "https://github.com/mnahad/wormhole"

[tool.setuptools_scm]
