[build-system]
requires = ["setuptools ~= 80.9.0", "setuptools_scm ~= 8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "wormhole"
dynamic = ["version"]
requires-python = ">= 3.13"
dependencies = [
  "astropy >= 7.1.0",
  "flax >= 0.10.6",
  "flaxoil @ git+https://github.com/mnahad/flaxoil.git@v0.8.0",
  "fsspec[http] >= 2025.5.1",
  "grain >= 0.2.9",
  "jax >= 0.6.1",
  "optax >= 0.2.5",
  "orbax-checkpoint >= 0.11.15",
  "pyarrow >= 20.0.0",
]
authors = [
  { name="Mohammed Nawabuddin", email="MNahad@users.noreply.github.com" },
]
description = "Exoplanet detection with flaxoil"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.license]
file = "LICENSE"

[project.scripts]
wormhole = "wormhole.cli.main:entrypoint"

[project.urls]
Repository = "https://github.com/mnahad/wormhole"

[tool.setuptools_scm]
